dist/1.0/bin/sample/retrieveUnpackaged/objects/RequestTemplate__c.object
<CustomObject>
    <description>Object storing information about Templates for Requests Import</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if Template is Active and Visible for Import Application</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ColumnsNo__c</fullName>
        <description>Number of Columns in the Template</description>
        <inlineHelpText>Number of Columns in the Template</inlineHelpText>
        <label>No of Columns</label>
        <summaryForeignKey>RequestTemplateField__c.RequestTemplate__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DefaultAEnd__c</fullName>
        <description>Default A End for imported Requests</description>
        <inlineHelpText>Default A End for imported Requests</inlineHelpText>
        <label>Default A End</label>
        <referenceTo>AddressBook__c</referenceTo>
        <relationshipLabel>Request Templates</relationshipLabel>
        <relationshipName>Request_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Technology__c</fullName>
        <description>Default Technology for imported Requests</description>
        <label>Default Technology</label>
        <picklist>
            <picklistValues>
                <fullName>DSL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leased Line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StartRow__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Indicates which row in the file is the first one to import</description>
        <label>Start Row</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Request Template</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>StartRow__c</columns>
        <columns>DefaultAEnd__c</columns>
        <columns>Default_Technology__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Request Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>